added webpack bundler to project

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,8 @@
     "jest": true
   },
   "parserOptions": {
-    "ecmaVersion": 2020
+    "ecmaVersion": "latest",
+    "sourceType": "module"
   },
   "extends": "eslint:recommended",
   "rules": {
